arithmetic operations, secondary index hint, IN operation, update tests